adiçao do meu depoimento e ajuste do botao .cta-botton-large

--- a/index.html
+++ b/index.html
@@ -470,17 +470,17 @@
                 <div class="testimonial-quote">
                   <i class="fas fa-quote-left quote-icon"></i>
                   <p>
-                    "O Colégio Baby Avançar superou todas as nossas expectativas. A equipe é extremamente dedicada e o desenvolvimento da nossa filha é visível a cada dia. A metodologia inovadora e o carinho com que tratam cada criança nos deixa muito tranquilos."
+                    "Como Pai do Arthur, tomar a decisão de mudar de escola foi difícil, mas necessária. Na escola municipal, eu via meu filho estagnado, sem estímulo para aprender. Desde que matriculei o Arthur no Colégio Baby Avançar, a transformação foi impressionante! Hoje tenho a tranquilidade de saber que ele está realmente aprendendo, se desenvolvendo e ainda participando de atividades incríveis como bombeiro mirim e jiu-jitsu. Ver o brilho nos olhos dele quando pergunto sobre o que aprendeu não tem preço. A Baby Avançar não oferece apenas educação - oferece esperança e um futuro melhor para nossos filhos."
                   </p>
                   <i class="fas fa-quote-right quote-icon"></i>
                 </div>
                 <div class="testimonial-author">
                   <div class="author-avatar">
-                    <i class="fas fa-user-circle"></i>
+                    <img src="img/meu-perfil.jpg" alt="">
                   </div>
                   <div class="author-info">
-                    <h4>Maria Silva</h4>
-                    <p>Mãe da Ana, 5 anos - Infantil V</p>
+                    <h4>Ronald</h4>
+                    <p>pai do Arthur, 6 anos - Infantil V</p>
                     <div class="rating">
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
@@ -571,10 +571,6 @@
                  class="cta-button-large" target="_blank">
                 <i class="fab fa-whatsapp"></i>
                 Falar no WhatsApp
-              </a>
-              <a href="#contato" class="cta-button-secondary">
-                <i class="fas fa-envelope"></i>
-                Solicitar Informações
               </a>
             </div>
           </div>
