encurtado o meu depoimento

--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                 <div class="testimonial-quote">
                   <i class="fas fa-quote-left quote-icon"></i>
                   <p>
-                    "Como Pai do Arthur, tomar a decisão de mudar de escola foi difícil, mas necessária. Na escola municipal, eu via meu filho estagnado, sem estímulo para aprender. Desde que matriculei o Arthur no Colégio Baby Avançar, a transformação foi impressionante! Hoje tenho a tranquilidade de saber que ele está realmente aprendendo, se desenvolvendo e ainda participando de atividades incríveis como bombeiro mirim e jiu-jitsu. Ver o brilho nos olhos dele quando pergunto sobre o que aprendeu não tem preço. A Baby Avançar não oferece apenas educação - oferece esperança e um futuro melhor para nossos filhos."
+                    "Tomar a decisão de tirar meu filho Arthur da escola municipal foi difícil, mas necessária. Ele estava estagnado, sem aprender nada. Desde que chegou ao Colégio Baby Avançar, a transformação foi impressionante! Hoje tenho a tranquilidade de saber que ele realmente está aprendendo e se desenvolvendo."
                   </p>
                   <i class="fas fa-quote-right quote-icon"></i>
                 </div>
@@ -480,7 +480,7 @@
                   </div>
                   <div class="author-info">
                     <h4>Ronald</h4>
-                    <p>pai do Arthur, 6 anos - Infantil V</p>
+                    <p>Pai do Arthur, 6 anos - Infantil V</p>
                     <div class="rating">
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
