inclusao das fotos 7 de setembro

--- a/galeria.html
+++ b/galeria.html
@@ -891,6 +891,77 @@
                 onclick="openModal(this.src)"
               />
             </div>
+            <div class="gallery-item" data-category="eventos">
+              <img
+                src="img/galeria/eventos/evento-13.jpg"
+                alt="7 de setembro"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="eventos">
+              <img
+                src="img/galeria/eventos/evento-14.jpg"
+                alt="7 de setembro"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="eventos">
+              <img
+                src="img/galeria/eventos/evento-15.jpg"
+                alt="7 de setembro"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="eventos">
+              <img
+                src="img/galeria/eventos/evento-16.jpg"
+                alt="7 de setembro"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="eventos">
+              <img
+                src="img/galeria/eventos/evento-17.jpg"
+                alt="7 de setembro"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="eventos">
+              <img
+                src="img/galeria/eventos/evento-18.png"
+                alt="7 de setembro"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="eventos">
+              <img
+                src="img/galeria/eventos/evento-19.png"
+                alt="7 de setembro"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="eventos">
+              <img
+                src="img/galeria/eventos/evento-20.png"
+                alt="7 de setembro"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="eventos">
+              <img
+                src="img/galeria/eventos/evento-21.png"
+                alt="7 de setembro"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="eventos">
+              <img
+                src="img/galeria/eventos/evento-22.png"
+                alt="7 de setembro"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            
 
              <!-- Jiu jitsu -->
             <div class="gallery-item" data-category="Jiu-Jitsu">
