adicão de fotos jiujitsu, bombeiros e educaçao

--- a/index.html
+++ b/index.html
@@ -839,6 +839,7 @@
     </footer>
 
     <script src="js/script.js"></script>
+    <script src="js/chatbot.js"></script>
     <script src="js/analytics.js"></script>
     <script src="js/accessibility.js"></script>
     <script src="js/performance-optimizer.js"></script>
