implementacao do agente avancar

--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta
-      property="twitter:url"
-      content="https://baby-avancar.vercel.app/"
-    />
+    <meta property="twitter:url" content="https://baby-avancar.vercel.app/" />
     <meta
       property="twitter:title"
       content="Colégio Baby Avançar | Educação Infantil e Fundamental"
@@ -128,15 +125,20 @@
     <a href="#main-content" class="skip-nav">Pular para o conteúdo principal</a>
 
     <header role="banner">
-      <nav id="navigation" class="navbar" role="navigation" aria-label="Menu principal">
+      <nav
+        id="navigation"
+        class="navbar"
+        role="navigation"
+        aria-label="Menu principal"
+      >
         <div class="nav-container">
           <div class="nav-logo">
             <a href="#inicio" class="logo-link">
               <div class="logo-icon">
                 <img
-                  src="img/logo.png"
+                  src="./img/logo.png"
                   alt="Colégio Baby Avançar"
-                  onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'"
+                  onerror="console.log('Erro ao carregar logo:', this.src); this.style.display='none'; this.nextElementSibling.style.display='flex'"
                 />
                 <i
                   class="fas fa-graduation-cap logo-fallback"
@@ -454,12 +456,19 @@
       </section>
 
       <!-- Seção de Depoimentos -->
-      <section id="depoimentos" class="section testimonials-section" aria-labelledby="depoimentos-title">
+      <section
+        id="depoimentos"
+        class="section testimonials-section"
+        aria-labelledby="depoimentos-title"
+      >
         <div class="container">
           <div class="testimonials-header fade-in">
-            <h2 id="depoimentos-title" class="section-title">O que dizem sobre nós</h2>
+            <h2 id="depoimentos-title" class="section-title">
+              O que dizem sobre nós
+            </h2>
             <p class="section-subtitle">
-              Depoimentos de pais e responsáveis que confiam na educação de seus filhos ao Colégio Baby Avançar
+              Depoimentos de pais e responsáveis que confiam na educação de seus
+              filhos ao Colégio Baby Avançar
             </p>
           </div>
 
@@ -470,13 +479,18 @@
                 <div class="testimonial-quote">
                   <i class="fas fa-quote-left quote-icon"></i>
                   <p>
-                    "Tomar a decisão de tirar meu filho Arthur da escola municipal foi difícil, mas necessária. Ele estava estagnado, sem aprender nada. Desde que chegou ao Colégio Baby Avançar, a transformação foi impressionante! Hoje tenho a tranquilidade de saber que ele realmente está aprendendo e se desenvolvendo."
+                    "Tomar a decisão de tirar meu filho Arthur da escola
+                    municipal foi difícil, mas necessária. Ele estava estagnado,
+                    sem aprender nada. Desde que chegou ao Colégio Baby Avançar,
+                    a transformação foi impressionante! Hoje tenho a
+                    tranquilidade de saber que ele realmente está aprendendo e
+                    se desenvolvendo."
                   </p>
                   <i class="fas fa-quote-right quote-icon"></i>
                 </div>
                 <div class="testimonial-author">
                   <div class="author-avatar">
-                    <img src="img/meu-perfil.jpg" alt="">
+                    <img src="img/meu-perfil.jpg" alt="" />
                   </div>
                   <div class="author-info">
                     <h4>Ronald</h4>
@@ -499,7 +513,10 @@
                 <div class="testimonial-quote">
                   <i class="fas fa-quote-left quote-icon"></i>
                   <p>
-                    "Escolhemos o Baby Avançar pela localização e metodologia, mas o que mais nos impressionou foi o compromisso com a formação integral das crianças. Meu filho desenvolveu não só academicamente, mas também socialmente e emocionalmente."
+                    "Escolhemos o Baby Avançar pela localização e metodologia,
+                    mas o que mais nos impressionou foi o compromisso com a
+                    formação integral das crianças. Meu filho desenvolveu não só
+                    academicamente, mas também socialmente e emocionalmente."
                   </p>
                   <i class="fas fa-quote-right quote-icon"></i>
                 </div>
@@ -528,7 +545,10 @@
                 <div class="testimonial-quote">
                   <i class="fas fa-quote-left quote-icon"></i>
                   <p>
-                    "A equipe pedagógica é excepcional! Eles realmente entendem cada criança individualmente e adaptam o ensino às necessidades específicas. A comunicação com os pais é constante e transparente. Recomendo muito!"
+                    "A equipe pedagógica é excepcional! Eles realmente entendem
+                    cada criança individualmente e adaptam o ensino às
+                    necessidades específicas. A comunicação com os pais é
+                    constante e transparente. Recomendo muito!"
                   </p>
                   <i class="fas fa-quote-right quote-icon"></i>
                 </div>
@@ -554,11 +574,25 @@
 
           <!-- Navegação dos depoimentos -->
           <div class="testimonials-navigation fade-in">
-            <p class="navigation-hint">Clique nos pontos para navegar ou use as setas do teclado</p>
+            <p class="navigation-hint">
+              Clique nos pontos para navegar ou use as setas do teclado
+            </p>
             <div class="nav-dots">
-              <button class="nav-dot active" data-testimonial="1" aria-label="Ver depoimento 1"></button>
-              <button class="nav-dot" data-testimonial="2" aria-label="Ver depoimento 2"></button>
-              <button class="nav-dot" data-testimonial="3" aria-label="Ver depoimento 3"></button>
+              <button
+                class="nav-dot active"
+                data-testimonial="1"
+                aria-label="Ver depoimento 1"
+              ></button>
+              <button
+                class="nav-dot"
+                data-testimonial="2"
+                aria-label="Ver depoimento 2"
+              ></button>
+              <button
+                class="nav-dot"
+                data-testimonial="3"
+                aria-label="Ver depoimento 3"
+              ></button>
             </div>
           </div>
 
@@ -567,8 +601,11 @@
             <h3>Faça parte da nossa família!</h3>
             <p>Junte-se aos pais que já confiam no Colégio Baby Avançar</p>
             <div class="cta-buttons">
-              <a href="https://wa.me/5585999701822?text=Olá! Gostaria de conhecer mais sobre o Colégio Baby Avançar." 
-                 class="cta-button-large" target="_blank">
+              <a
+                href="https://wa.me/5585999701822?text=Olá! Gostaria de conhecer mais sobre o Colégio Baby Avançar."
+                class="cta-button-large"
+                target="_blank"
+              >
                 <i class="fab fa-whatsapp"></i>
                 Falar no WhatsApp
               </a>
@@ -791,11 +828,7 @@
                   </div>
                 </form>
 
-                <div
-                  class="form-success"
-                  id="formSuccess"
-                  style="display: none"
-                >
+                <div class="form-success hidden" id="formSuccess">
                   <div class="success-content">
                     <i class="fas fa-check-circle"></i>
                     <h4>Mensagem Enviada com Sucesso!</h4>
@@ -838,26 +871,112 @@
       </div>
     </footer>
 
+    <!-- Chatbot Profissional -->
+    <div
+      id="chatbot-button"
+      onclick="toggleChat()"
+      aria-label="Abrir chat do atendente virtual"
+    >
+      💬
+      <div class="chatbot-status" aria-hidden="true"></div>
+    </div>
+
+    <div
+      id="chatbot-container"
+      role="dialog"
+      aria-labelledby="chatbot-title"
+      aria-hidden="true"
+    >
+      <div class="chatbot-header">
+        <div class="chatbot-header-info">
+          <div class="chatbot-avatar" aria-hidden="true">🌅</div>
+          <div>
+            <h3 id="chatbot-title" class="chatbot-title">
+              Agente Virtual Avançar
+            </h3>
+            <p class="chatbot-subtitle">Baby Avançar</p>
+          </div>
+        </div>
+        <button
+          class="chatbot-close"
+          onclick="toggleChat()"
+          aria-label="Fechar chat"
+        >
+          ×
+        </button>
+      </div>
+
+      <div
+        id="chat-messages"
+        role="log"
+        aria-live="polite"
+        aria-label="Mensagens do chat"
+      >
+        <div class="message-welcome">
+          <p>
+            <strong>Olá! Sou o Agente Virtual Avançar! 🤖✨</strong
+            ><br />Especialista em educação infantil do Colégio Baby Avançar.
+            Estou aqui para ajudar sua família a descobrir o melhor caminho
+            educacional!
+          </p>
+
+          <div class="quick-actions">
+            <button
+              class="quick-action-btn"
+              onclick="sendMessage('Quero saber sobre matrícula e valores')"
+            >
+              💰 Matrícula
+            </button>
+            <button
+              class="quick-action-btn secondary"
+              onclick="sendMessage('Como funciona a metodologia de vocês?')"
+            >
+              📚 Metodologia
+            </button>
+            <button
+              class="quick-action-btn secondary"
+              onclick="sendMessage('Quais eventos vocês têm?')"
+            >
+              🎉 Eventos
+            </button>
+            <button
+              class="quick-action-btn secondary"
+              onclick="sendMessage('Preciso do contato de vocês')"
+            >
+              📞 Contato
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div class="chatbot-input">
+        <input
+          type="text"
+          id="chat-input"
+          placeholder="Digite sua mensagem..."
+          onkeypress="if(event.key==='Enter') sendMessage()"
+          aria-label="Digite sua mensagem"
+          autocomplete="off"
+        />
+        <button
+          class="send-button"
+          onclick="sendMessage()"
+          aria-label="Enviar mensagem"
+        >
+          ➤
+        </button>
+      </div>
+    </div>
+
     <script src="js/script.js"></script>
     <script src="js/chatbot.js"></script>
+    <script src="js/chatbot-widget.js"></script>
     <script src="js/analytics.js"></script>
     <script src="js/accessibility.js"></script>
     <script src="js/performance-optimizer.js"></script>
     <script src="js/testimonials.js"></script>
-    
+
     <!-- Service Worker Registration -->
-    <script>
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/js/service-worker.js')
-            .then(registration => {
-              console.log('SW registered: ', registration);
-            })
-            .catch(registrationError => {
-              console.log('SW registration failed: ', registrationError);
-            });
-        });
-      }
-    </script>
+    <script src="js/service-worker-init.js"></script>
   </body>
 </html>
