--- a/galeria.html
+++ b/galeria.html
@@ -94,13 +94,13 @@
             <a href="index.html" class="logo-link">
               <div class="logo-icon">
                 <img
-                  src="img/logo.png"
+                  src="./img/logo.png"
                   alt="Colégio Baby Avançar"
-                  onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'"
+                  onerror="console.log('Erro ao carregar logo:', this.src); this.style.display='none'; this.nextElementSibling.style.display='flex'"
                 />
                 <i
                   class="fas fa-graduation-cap logo-fallback"
-                  style="display: none"
+                  style="display: none;"
                 ></i>
               </div>
               <div class="logo-text">
