ajustado o z-index para a exibiçao total do chat no mobile

--- a/index.html
+++ b/index.html
@@ -900,9 +900,9 @@
         <button
           class="chatbot-close"
           onclick="toggleChat()"
-          aria-label="Fechar chat"
+          aria-label="Minimizar chat"
         >
-          ×
+          <i class="fas fa-chevron-down" aria-hidden="true"></i>
         </button>
       </div>
 
